syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.databaseserver.generated";

service AuthenticationService {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string email = 1;
  string passwordHash = 2;
}

message LoginResponse {
  string role = 1;
  string name = 2;
}
